Fix upload position on mobile brower

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@ body {
   width: 420px;
   height: 420px;
   margin: -210px 0 0 -210px;
+  position: fixed;
   top: 45%;
   left: 50%;
   cursor: pointer;
